--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
-    needs: set
+    if: needs.set.result == 'success' or needs.set.result == 'skipped'
     steps:
     - name: Copy files to the test website with the AWS CLI
       run: echo "deploy complete"
