--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
+    needs: [set, build]
     if: needs.set.result == 'success' || needs.set.result == 'skipped'
     steps:
     - name: Copy files to the test website with the AWS CLI
