--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,7 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
-    needs: [set, build]
-    if: set.result == 'success' || set.result == 'skipped'
+    if: needs.set.result == 'skipped'
     steps:
     - name: Copy files to the test website with the AWS CLI
       run: echo "deploy complete"
