--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,6 @@ on:
 
 name: Build api and push to ECR
 
-env:
-  ACTIONS_RUNNER_DEBUG: true
-
 jobs:
   build:
     name: build
@@ -32,7 +29,8 @@ jobs:
   deploy:
     name: deploy
     runs-on: ubuntu-latest
-    if: needs.set.result == 'skipped'
+    needs: set
+    if: always() && (needs.set.result == 'skipped' || needs.set.result == 'success')
     steps:
     - name: Copy files to the test website with the AWS CLI
       run: echo "deploy complete"
