--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,9 +30,7 @@ jobs:
     name: deploy
     runs-on: ubuntu-latest
     needs: set
-    if: always() && \
-      (needs.set.result == 'skipped' || needs.set.result == 'success') \
-      (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main')
+    if: always() && (needs.set.result == 'skipped' || needs.set.result == 'success') && (startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/main')
     steps:
     - name: Copy files to the test website with the AWS CLI
       run: echo "deploy complete"
